--- a/Portfilio-middys.html
+++ b/Portfilio-middys.html
@@ -119,11 +119,14 @@
 
                                                         <!-- images -->
 
-                                                        <div class="cbp-item">
+                                                                <div class="cbp-item">
                                                             <div class="cbp-caption-defaultWrap">
-                                                                <img src="assets/images/portfolio/projects/Middys/Q4CreativeTvAnimated.mp4" class="portfolio-media-image" alt=middys >
-                                                            </div>
+                                                        <video width="640" height="360" controls>
+                                                            <source src="assets/images/portfolio/projects/Middys/q4creativetv.mp4" type="video/mp4">
+                                                            Your browser does not support the video tag.
+                                                          </video>
                                                         </div>
+                                                    </div>
 
                                                         <div class="cbp-item col-lg-6">
                                                             <div class="cbp-caption-defaultWrap">
