--- a/Portfilio-middys.html
+++ b/Portfilio-middys.html
@@ -118,10 +118,7 @@
 
                                                         <div class="cbp-item">
                                                             <div class="cbp-caption-defaultWrap">
-                                                        <video width="1200" height="auto" controls>
-                                                            <source src="assets/images/portfolio/projects/Middys/q4creativetv.mp4" type="video/mp4">
-                                                            Your browser does not support the video tag.
-                                                          </video>
+                                                 <img src="assets/images/portfolio/projects/middys/q4creativetv.mp4" class="portfolio-media-image" alt=middys >
                                                         </div>
                                                     </div>
                                                         <div class="cbp-item col-lg-6">
