--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                                             <div class="col-sm-12 offset-lg-1 col-lg-10">
                                                   <div class="heading-block text-center">
                                                     <h1 class="block-size-1">
-                                                       I’m a Graphic & Digital Designer based in Melbourne with over 10 years experience across brand rollout, print & digital campaigns, illustration, motion & UI design.
-                                                    </h1>
-                                                </div>
+Melbourne-based Graphic & Digital Designer with 10+ years in brand rollout, print & digital campaigns, illustration, motion & UI design.                                                </div>
                                             </div>
                                         </div>     
                                     </div>         
