--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                             <div class="col-sm-12 offset-lg-1 col-lg-10">
                                                   <div class="heading-block text-center">
                                                     <h1 class="block-size-1">
-Melbourne-based Graphic & Digital Designer with 10+ years in brand rollout, print & digital campaigns, illustration, motion & UI design.                                                </div>
+Graphic & Digital Designer with 10+ years in brand rollout, print & digital campaigns, illustration, motion & UI design.                                                </div>
                                             </div>
                                         </div>     
                                     </div>         
