--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
 
 
                                                          <div class="cbp-item branding print web">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-tuffarse.html">                                                                
+                                                            <a class="cbp-caption" href="tuffarse.html">                                                                
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/tuffarse/GIF/Animation_2.gif" class="portfolio-thumbnail" alt="Tuff Arse" >
@@ -130,7 +130,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
                                                         </div>
 
                                                          <div class="cbp-item  client">                                                           
-                                                            <a class="cbp-caption" href="Portfilio-middys.html">
+                                                            <a class="cbp-caption" href="middys.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/middys/ebikeheader.gif" class="portfolio-thumbnail" alt="Middys" >
@@ -144,7 +144,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
 
 
                                                         <div class="cbp-item client">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-bona.html">
+                                                            <a class="cbp-caption" href="bona.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/bona/bona-collection.jpeg" class="portfolio-thumbnail" alt="Bona" >
@@ -156,7 +156,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
                                                         </div>
 
                                                         <div class="cbp-item  client">                                                           
-                                                            <a class="cbp-caption" href="Portfilio-lumeta.html">
+                                                            <a class="cbp-caption" href="lumeta.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/Lumeta/lumeta-window-mockup-crop.jpg" class="portfolio-thumbnail" alt="Middys" >
@@ -170,7 +170,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
 
 
                                                         <div class="cbp-item client">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-eatscape.html">
+                                                            <a class="cbp-caption" href="eatscape.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/Eatscape/Eatscape-MacBookscroll.gif" class="portfolio-thumbnail" alt="Bona" >
@@ -187,7 +187,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
                                            
 
                                                         <div class="cbp-item branding print web">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-kosdown.html">                                                                
+                                                            <a class="cbp-caption" href="kosdown.html">                                                                
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/kosdown/footy-graphics.gif" class="portfolio-thumbnail" alt="Thorburn" >
@@ -203,7 +203,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
 
 
                                                         <div class="cbp-item  branding">                                                           
-                                                            <a class="cbp-caption" href="Portfilio-dma.html">
+                                                            <a class="cbp-caption" href="dma.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/dma/BDMA-animation-narrow.gif" class="portfolio-thumbnail" alt="DMA" >
@@ -221,7 +221,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
 
 
                                                         <div class="cbp-item branding print web">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-thorburn.html">                                                                
+                                                            <a class="cbp-caption" href="thorburn.html">                                                                
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/thorburn/thorburn-hero.jpeg" class="portfolio-thumbnail" alt="Thorburn" >
@@ -233,7 +233,7 @@ Graphic & Digital Designer with 10+ years in brand rollout, print & digital camp
                                                         </div>
 
                                                         <div class="cbp-item  branding">                                                            
-                                                            <a class="cbp-caption" href="Portfilio-design-in-music.html">
+                                                            <a class="cbp-caption" href="design-in-music.html">
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
                                                                         <img src="assets/images/portfolio/projects/design-in-music/design-in-music-001.jpg" class="portfolio-thumbnail" alt="DesigninMusic" >
