--- a/thorburn.html
+++ b/thorburn.html
@@ -194,7 +194,7 @@
                                         <div class="portfolio-navigation-wrap">
                                             <ul class="portfolio-navigation">
                                                 <li class="portfolio-prev">
-                                                    <a href="Portfilio-dma.html" rel="prev">
+                                                    <a href="dma.html" rel="prev">
                                                         <span>Prev</span>
                                                     </a>
                                                 </li>
@@ -204,7 +204,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="portfolio-next">
-                                                    <a href="Portfilio-design-in-music.html" rel="next">
+                                                    <a href="design-in-music.html" rel="next">
                                                         <span>Next </span>
                                                     </a>
                                                 </li>
