--- a/lumeta.html
+++ b/lumeta.html
@@ -240,7 +240,7 @@
                                                     <div class="portfolio-navigation-wrap">
                                                         <ul class="portfolio-navigation">
                                                             <li class="portfolio-prev">
-                                                                <a href="Portfilio-bona.html" rel="prev">
+                                                                <a href="bona.html" rel="prev">
                                                                     <span>Prev</span>
                                                                 </a>
                                                             </li>
@@ -250,7 +250,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="portfolio-next">
-                                                                <a href="Portfilio-kosdown.html" rel="next">
+                                                                <a href="kosdown.html" rel="next">
                                                                     <span>Next </span>
                                                                 </a>
                                                             </li>
