--- a/middys.html
+++ b/middys.html
@@ -183,7 +183,7 @@
                                                 <div class="portfolio-navigation-wrap">
                                                     <ul class="portfolio-navigation">
                                                         <li class="portfolio-prev">
-                                                            <a href="Portfilio-tuffarse.html" rel="prev">
+                                                            <a href="tuffarse.html" rel="prev">
                                                                 <span>Prev</span>
                                                             </a>
                                                         </li>
@@ -193,7 +193,7 @@
                                                             </a>
                                                         </li>
                                                         <li class="portfolio-next">
-                                                            <a href="Portfilio-bona.html" rel="next">
+                                                            <a href="bona.html" rel="next">
                                                                 <span>Next </span>
                                                             </a>
                                                         </li>
