--- a/tuffarse.html
+++ b/tuffarse.html
@@ -312,7 +312,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="portfolio-next">
-                                                                <a href="Portfilio-middys.html" rel="next">
+                                                                <a href="middys.html" rel="next">
                                                                     <span>Next </span>
                                                                 </a>
                                                             </li>
