--- a/about.html
+++ b/about.html
@@ -75,14 +75,13 @@
                                                 </div>
                                                 <div class="text-block m-b-45">
                                                     <p class="medium">
-                                                       <p> <strong>Senior Brand Designer | Multi-disciplinary across brand, digital, print & motion</strong></p>
+                                                       <p> <strong>Graphic & Digital Designer with 10+ years’ studio experience.</strong></p>
 
-                                                   <p> I’m a multi-disciplinary designer based in Melbourne, with over 10 years’ industry experience. I have a strong all-round skill set across brand rollout, visual identity, UI design, animation, illustration, and a passion for bringing ideas to life through hands-on work in the Adobe Creative Suite. </p>
+                                                  <p>I’m a graphic and digital designer based in Melbourne with 10+ years’ experience across branding, print design, digital design and motion graphics. I have a strong all‑rounder skill set, from brand rollouts and visual identity design to UI design, animation and illustration. I’m a creative problem solver who loves to inject personality and motion into designs and gets a kick out of bringing everything to life.</p>
 
-<p> Whilst working in a design studio, I’ve enjoyed collaborating with workmates and directly with clients to deliver creative solutions across multiple platforms. I’ve helped roll out brands across multiple applications, developing visual identities and crafting engaging campaigns. I particularly like brand rollouts and injecting personality through tone, illustration, and motion. </p>
+<p>With 10 years of studio experience under my belt, I’ve enjoyed collaborating with teammates, marketing teams and clients to deliver brand identity, marketing collateral, print campaigns, digital assets, EDM campaigns and social media content. With this background, I’m confident in managing multiple projects in a fast‑paced environment across different industries whilst maintaining strong attention to detail.</p>
 
-<p> I’m always looking to evolve my skills and embrace new technologies — lately, I’ve been growing my motion design skills and exploring new tools like AI to stay current and push my work further. </p> 
-                                                       
+<p>I’m always looking to expand my skills and embrace new technologies. Lately I’ve been experimenting with AI and I’m always looking for smarter ways to push my work further.</p>
 
                                                    <p><strong>Skills</strong> </p> 
                                                     <ul>
