--- a/about.html
+++ b/about.html
@@ -76,12 +76,12 @@
                                                 <div class="text-block m-b-45">
                                                     <p class="medium">
                                                        <p> <strong>Graphic & Digital Designer with 10+ years’ studio experience.</strong></p>
+<p>I’m a senior graphic and digital designer based in Melbourne with 10+ years’ agency experience across branding, print design, digital design and motion graphics. I have a strong all‑rounder skill set, from brand rollouts and visual identity design to UI design, animation and illustration. I’m a creative problem solver who loves to inject personality and motion into designs and enjoys bringing everything to life.</p>
 
-                                                  <p>I’m a graphic and digital designer based in Melbourne with 10+ years’ experience across branding, print design, digital design and motion graphics. I have a strong all‑rounder skill set, from brand rollouts and visual identity design to UI design, animation and illustration. I’m a creative problem solver who loves to inject personality and motion into designs and gets a kick out of bringing everything to life.</p>
-
-<p>With 10 years of studio experience under my belt, I’ve enjoyed collaborating with teammates, marketing teams and clients to deliver brand identity, marketing collateral, print campaigns, digital assets, EDM campaigns and social media content. With this background, I’m confident in managing multiple projects in a fast‑paced environment across different industries whilst maintaining strong attention to detail.</p>
+<p>I’ve enjoyed collaborating with teammates, marketing teams and clients to deliver brand identity, marketing collateral, print campaigns, digital assets, EDM campaigns and social media content. With this background, I’m confident in managing multiple projects in a fast‑paced environment across different industries whilst maintaining strong attention to detail.</p>
 
 <p>I’m always looking to expand my skills and embrace new technologies. Lately I’ve been experimenting with AI and I’m always looking for smarter ways to push my work further.</p>
+
 
                                                    <p><strong>Skills</strong> </p> 
                                                     <ul>
