--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                                                 </div>
                                                 <div class="text-block m-b-45">
                                                     <p class="medium">
-                                                       <p> <strong>Graphic & Digital Designer with 10+ years’ studio experience.</strong></p>
+                                                       <p> <strong>Graphic & Digital Designer with 10+ years’ agency experience.</strong></p>
 <p>I’m a senior graphic and digital designer based in Melbourne with 10+ years’ agency experience across branding, print design, digital design and motion graphics. I have a strong all‑rounder skill set, from brand rollouts and visual identity design to UI design, animation and illustration. I’m a creative problem solver who loves to inject personality and motion into designs and enjoys bringing everything to life.</p>
 
 <p>I’ve enjoyed collaborating with teammates, marketing teams and clients to deliver brand identity, marketing collateral, print campaigns, digital assets, EDM campaigns and social media content. With this background, I’m confident in managing multiple projects in a fast‑paced environment across different industries whilst maintaining strong attention to detail.</p>
@@ -85,32 +85,34 @@
 
                                                    <p><strong>Skills</strong> </p> 
                                                     <ul>
-                                                    <li> Brand Rollout & Identity Design </li>
-                                                    <li> Print Design (flyers, brochures, signage, packaging)</li>
-                                                    <li> Digital Campaigns (EDMs, social, digital banners)</li>
-                                                    <li> Animation & Motion Graphics </li>
-                                                    <li> UI Design</li>
-                                                    <li> Video Editing & Content Creation</li>
-                                                    <li> Illustration & Icon Design</li>
-                                                    <li> Prepress & Production Setup</li>
-                                                    <li> Client Liaison & Creative Collaboration</li>
+                                                    <li>Brand Rollout & Identity Design
+                                                        <li> Print Design & Campaigns</li>   
+                                                        <li> Digital Campaigns & Social Media Content</li>   
+                                                        <li> Animation & Motion Graphics</li>   
+                                                        <li> Email Design & Marketing </li>   
+                                                        <li> Illustration & Icon Design</li>   
+                                                        <li> UI Design & Web Content Creation</li>   
+                                                        <li> HTML & CSS</li>   
+                                                        <li> Video Editing & Production</li>   
+                                                        <li> Product Photography & Mockups </li>   
+                                                        <li> Client Liaison & Creative Collaboration</li>   
                                                 </ul>
                                                 </div>
 
 
 
-                                                    <p><strong>Software & Platform Proficiency</strong></p> 
+                                                    <p><strong>Software</strong></p> 
                                                     
                                                     <ul>
-                                                    <li> InDesign – layout design for brochures, reports, and publications</li>
-                                                    <li> Illustrator – logo design, vector illustration, brand assets</li>
-                                                    <li> Photoshop – image editing, mockups, retouching</li>
-                                                    <li> After Effects – motion graphics and animation</li>
-                                                    <li> Premiere Pro – video editing and content creation for digital platforms</li>
-        
-                                                     <li> Mailchimp – campaign creation, template design, segmentation</li>
-                                                     <li> WordPress & Joomla – backend content management</li>
-                                                     <li> HTML & CSS – coding for web and email templates</li>
+                                                         <li> Adobe InDesign 
+                                                        <li> Adobe Illustrator </li>
+                                                       <li>  Adobe Photoshop</li>
+                                                       <li>  Adobe After Effects</li>
+                                                       <li>  Adobe Premiere Pro</li>
+                                                       <li>  Adobe XD</li>
+                                                       <li>  Mailchimp</li>
+                                                       <li>  WordPress, Joomla & Shopify</li>
+                                                       <li>  Visual Studio Code </li>
                                                                                 </ul>
 
                                                 <div class="row m-t-50 m-b-100">                                    
