--- a/middys.html
+++ b/middys.html
@@ -162,20 +162,41 @@
                                                                     </div>
                                                                 </div>
 
-                                                                <!-- 2-column image -->
-                                                                <div class="cbp-item col-lg-6">
-                                                                    <div class="cbp-caption-defaultWrap">
-                                                                    <img src="assets/images/portfolio/projects/middys/win-more-this-summer-flyer-crop.jpg" class="portfolio-media-image" alt="middys" />
-                                                                    </div>
-                                                                </div>
+                                                                
+                                                          <!-- 2-column image -->
+                                                            <div class="cbp-item col-lg-6">
+                                                            <div class="cbp-caption-defaultWrap portfolio-media-block">
+                                                                <img 
+                                                                src="assets/images/portfolio/projects/middys/win-more-this-summer-flyer-crop.jpg" 
+                                                                class="portfolio-media-image" 
+                                                                alt="middys" 
+                                                                loading="lazy"
+                                                                width="1080" 
+                                                                height="1080" 
+                                                                style="object-fit: cover; display: block;" />
+                                                            </div>
+                                                            </div>
 
-                                                                <!-- 2-column video -->
-                                                                <div class="cbp-item col-lg-6">
+                                                            <!-- 2-column video -->
+                                                            <div class="cbp-item col-lg-6">
+                                                            <div class="cbp-caption-defaultWrap portfolio-media-block">
+                                                                <video 
+                                                                class="portfolio-media-video" 
+                                                                autoplay muted loop playsinline preload="auto" 
+                                                                poster="assets/images/portfolio/projects/middys/Q2TrafficCarousel1080px-thumb.png"
+                                                                width="1080" 
+                                                                height="1080"
+                                                                style="object-fit: cover; display: block;">
+                                                                <source src="assets/images/portfolio/projects/middys/Q2TrafficCarousel1080px.mp4" type="video/mp4" />
+                                                                Your browser does not support the video tag.
+                                                                </video>
+                                                            </div>
+                                                            </div>
+
+                                                                <!-- Full-width image -->
+                                                                <div class="cbp-item">
                                                                     <div class="cbp-caption-defaultWrap">
-                                                                    <video class="portfolio-media-video" autoplay muted loop playsinline preload="auto" width="100%" poster="assets/images/portfolio/projects/middys/Q2TrafficCarousel1080px-thumb.png">
-                                                                        <source src="assets/images/portfolio/projects/middys/Q2TrafficCarousel1080px.mp4" type="video/mp4" />
-                                                                        Your browser does not support the video tag.
-                                                                    </video>
+                                                                    <img src="assets/images/portfolio/projects/middys/vic_melbournecbdbranch.jpg" class="portfolio-media-image" alt="middys" />
                                                                     </div>
                                                                 </div>
 
