--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Graphic & Digital Designer with 10+ years' studio experience across brands, prin
                                                             <a class="cbp-caption" href="kosdown.html">                                                                
                                                                 <div class="cbp-caption">		                                                                    
                                                                     <div class="cbp-caption-defaultWrap">							
-                                                                        <img src="assets/images/portfolio/projects/kosdown/kosdown-deskpad-set-birds.jpeg" class="portfolio-thumbnail" alt="Thorburn" >
+                                                                        <img src="assets/images/portfolio/projects/kosdown/footy-graphics.gif" class="portfolio-thumbnail" alt="Thorburn" >
                                                                     </div>                                                                  
                                                                 </div>  
                                                                 <div class="cbp-l-grid-agency-title alignCenter">Kosdown</div>
