--- a/middys.html
+++ b/middys.html
@@ -197,6 +197,12 @@
                                                                     </div>
                                                                 </div>
 
+                                                                  <!-- 2-column image -->
+                                                                <div class="cbp-item col-lg-6">
+                                                                    <div class="cbp-caption-defaultWrap">
+                                                                        <img class="portfolio-media-image" src="assets/images/portfolio/projects/middys/score-a-tasty-mockup.jpg" alt="Score a Tasty Mockup" loading="lazy" width="100%">
+                                                                    </div>
+                                                                </div>
                                                                 <!-- 2-column gif -->
                                                                 <div class="cbp-item col-lg-6">
                                                                     <div class="cbp-caption-defaultWrap">
@@ -207,18 +213,10 @@
                                                                     </div>
                                                                 </div>
 
-                                                                <!-- 2-column video -->
-                                                                <div class="cbp-item col-lg-6">
-                                                                    <div class="cbp-caption-defaultWrap">
-                                                                        <video class="portfolio-media-video" autoplay muted loop playsinline preload="auto" width="100%" poster="assets/images/portfolio/projects/middys/BeatsEDM-thumb.jpg" loading="lazy">
-                                                                            <source src="assets/images/portfolio/projects/middys/BeatsEDM.mp4" type="video/mp4" />
-                                                                            Your browser does not support the video tag.
-                                                                        </video>
-                                                                    </div>
-</div>
+                                                            
 
 
-                                                                </div> <!-- #portfolio-container-grid -->
+                                                            </div> <!-- #portfolio-container-grid -->
                                                             </div>
                                                             </div>
                                                         </div>
